--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "servicenow-dev-skeleton",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "description": "Skeleton project for ServiceNow typescript development",
   "main": "dist/tasks.js",
   "author": "Bryce Godfrey",
@@ -38,6 +38,7 @@
     "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^4.0.0",
     "gulpclass": "^0.1.2",
+    "jsdom": "^11.10.0",
     "request": "^2.85.0",
     "require-dir": "^1.0.0",
     "ts-simple-ast": "^9.1.0",
@@ -49,6 +50,7 @@
     "@types/chalk": "^2.2.0",
     "@types/dotenv": "^4.0.2",
     "@types/gulp": "^4.0.5",
+    "@types/jsdom": "^11.0.4",
     "@types/mocha": "^5.2.0",
     "@types/node": "^9.6.2",
     "@types/request": "^2.47.0",
